--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-.aux
-.log
-.nav
-.out
-.snm
-.toc
-.synctex
-TSWLatexianTemp*
-.DS_Store
+*.aux
+*.dvi
+*.log
+*.nav
+*.out
+*.snm
+*.toc
+*.synctex
+*TSWLatexianTemp*
+*.DS_Store
